--- a/app/templates/graph.html
+++ b/app/templates/graph.html
@@ -41,12 +41,12 @@
                     <p class="typeOfData">식사량</p>
                     <div class="inputDate">
                         <div class="unitOfTime">
-                            <div>
+                            <div class="unitDay">
                                 <input type="radio" name="unit" id="day" value="day" onchange="changeUnitOfTime(1)"
                                     checked>
                                 <label for="day">일</label>
                             </div>
-                            <div>
+                            <div class="unitTime">
                                 <input type="radio" name="unit" id="hour" value="hour" onchange="changeUnitOfTime(1)">
                                 <label for="hour">시간</label>
                             </div>
@@ -130,12 +130,12 @@
                     <p class="typeOfData">활동량</p>
                     <div class="inputDate">
                         <div class="unitOfTime">
-                            <div>
+                            <div class="unitDay">
                                 <input type="radio" name="unit2" id="day2" value="day" onchange="changeUnitOfTime(2)"
                                     checked>
                                 <label for="day">일</label>
                             </div>
-                            <div>
+                            <div class="unitTime">
                                 <input type="radio" name="unit2" id="hour2" value="hour" onchange="changeUnitOfTime(2)">
                                 <label for="hour">시간</label>
                             </div>
@@ -223,12 +223,12 @@
 
                     <div class="inputDate">
                         <div class="unitOfTime">
-                            <div>
+                            <div class="unitDay">
                                 <input type="radio" name="unit3" id="day3" value="day" onchange="changeUnitOfTime(3)"
                                     checked>
                                 <label for="day">일</label>
                             </div>
-                            <div>
+                            <div class="unitTime">
                                 <input type="radio" name="unit3" id="hour3" value="hour" onchange="changeUnitOfTime(3)">
                                 <label for="hour">시간</label>
                             </div>
