--- a/app/templates/live.html
+++ b/app/templates/live.html
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div id="cctvVideo">
-                        <video src="{{ url_for('static', path='/video/detect/h264_v01.mp4') }}" type="video/mp4" width="320" height="240" autoplay playsinline muted></video>
+                        <video src="{{ url_for('static', path='/video/original/cowfarmB_ch3_2022072519_016.mp4') }}" type="video/mp4" width="320" height="240" autoplay playsinline muted></video>
                     </div>
                     <div id="map">
                         <canvas id="mapCanvas" style="border: 2px solid black"></canvas>
