--- a/app/templates/perfect.html
+++ b/app/templates/perfect.html
@@ -53,12 +53,7 @@
                         </ul>
                     </div>
                 </div>
-                <div id="youtubevideo">
-                    <iframe width="320" height="240" src="https://www.youtube.com/embed/ZT2w8-bgt4A?mute=1&autoplay=1"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen playsinline></iframe>
-                </div>
+                <div id="player"></div>
             </article>
         </main>
         <footer></footer>
@@ -86,6 +81,45 @@
             document.getElementById('checkVisible').checked = false
         }
     })
+    var tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+    var player;
+    function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+            videoId: 'Kyv0Fi551l0',
+            playerVars: {
+                'autoplay': 1,
+                'rel': 0,
+                'modestbranding': 1,
+                'playsinline': 1,
+                'showinfo': 1,
+                'rel': 0,
+                'controls': 1,
+                'loop': 1,
+                'mute': 1,
+                // 'origin': 'https://meeranblog24x7.blogspot.com/'
+            },
+            events: {
+                'onReady': onPlayerReady,
+                // 'onStateChange': onPlayerStateChange
+            }
+        });
+    }
+    function onPlayerReady(event) {
+        player.playVideo();
+        player.mute();
+    } var done = false;
+    function onPlayerStateChange(event) {
+        if (event.data == YT.PlayerState.PLAYING && !done) {
+            setTimeout(stopVideo, 6000);
+            done = true;
+        }
+    }
+    function stopVideo() {
+        player.stopVideo();
+    }
 </script>
 
 </html>
