--- a/app/templates/live.html
+++ b/app/templates/live.html
@@ -49,16 +49,16 @@
                                     <label><a href="/live">1번 CCTV</a></label>
                                 </li>
                                 <li id="cctv2">
-                                    <label><a href="/performance">퍼포먼스</a></label>
+                                    <label><a href="/performance">개체 추적 확인</a></label>
                                 </li>
                                 <li id="cctv3">
-                                    <label><a href="/perfect">퍼펙트</a></label>
+                                    <label><a href="/perfect">3채널 통합 확인</a></label>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div id="cctvVideo">
-                        <video src="{{ url_for('static', path='/video/original/cowfarmB_ch3_2022072519_016.mp4') }}" type="video/mp4" width="320" height="240" autoplay playsinline muted></video>
+                        <video src="{{ url_for('static', path='/video/original/ch3_cctv_origin_5min_ban.mp4') }}" type="video/mp4" width="320" height="240" autoplay playsinline muted></video>
                     </div>
                     <div id="map">
                         <canvas id="mapCanvas" style="border: 2px solid black"></canvas>
