--- a/app/templates/perfect.html
+++ b/app/templates/perfect.html
@@ -40,7 +40,7 @@
                     <div id="defaultCCTV">
                         <label id="cctvLabel">
                             <input type="checkbox" id="checkVisible" onchange="changeVisible()" style="display: none;">
-                            <p id="defaultText">퍼펙트</p>
+                            <p id="defaultText">3채널 통합 확인</p>
                             <img id="arrow"
                                 src="{{ url_for('static', path='/img/outline_expand_more_white_24dp.png') }}">
                         </label>
@@ -48,8 +48,8 @@
                     <div id="cctvListFrame">
                         <ul id="cctvList">
                             <li id="cctv1"><label><a href="/live">1번 CCTV</a></label></li>
-                            <li id="cctv2"><label><a href="/performance">퍼포먼스</a></label></li>
-                            <li id="cctv3"><label><a href="/perfect">퍼펙트</a></label></li>
+                            <li id="cctv2"><label><a href="/performance">개체 추적 확인</a></label></li>
+                            <li id="cctv3"><label><a href="/perfect">3채널 통합 확인</a></label></li>
                         </ul>
                     </div>
                 </div>
