--- a/app/templates/performance.html
+++ b/app/templates/performance.html
@@ -40,7 +40,7 @@
                     <div id="defaultCCTV">
                         <label id="cctvLabel">
                             <input type="checkbox" id="checkVisible" onchange="changeVisible()" style="display: none;">
-                            <p id="defaultText">퍼포먼스</p>
+                            <p id="defaultText">개체 추적 확인</p>
                             <img id="arrow"
                                 src="{{ url_for('static', path='/img/outline_expand_more_white_24dp.png') }}">
                         </label>
@@ -51,10 +51,10 @@
                                 <label><a href="/live">1번 CCTV</a></label>
                             </li>
                             <li id="cctv2">
-                                <label><a href="/performance">퍼포먼스</a></label>
+                                <label><a href="/performance">개체 추적 확인</a></label>
                             </li>
                             <li id="cctv3">
-                                <label><a href="/perfect">퍼펙트</a></label>
+                                <label><a href="/perfect">3채널 통합 확인</a></label>
                             </li>
                         </ul>
                     </div>
@@ -96,7 +96,7 @@
     var player;
     function onYouTubeIframeAPIReady() {
         player = new YT.Player('player', {
-            videoId: 'GVOX07Q7s0U',
+            videoId: 'fezSKFBDWXo',
             playerVars: {
                 'autoplay': 1,
                 'rel': 0,
@@ -114,29 +114,8 @@
                 // 'onStateChange': onPlayerStateChange
             }
         });
-    }
-    function onPlayerReady(event) {
-        player.playVideo();
-        player.mute();
-    } var done = false;
-    function onPlayerStateChange(event) {
-        if (event.data == YT.PlayerState.PLAYING && !done) {
-            setTimeout(stopVideo, 6000);
-            done = true;
-        }
-    }
-    function stopVideo() {
-        player.stopVideo();
-    }
-    // 2번째 영상
-    var tag2 = document.createElement('script');
-    tag2.src = "https://www.youtube.com/iframe_api";
-    var firstScriptTag2 = document.getElementsByTagName('script')[1];
-    firstScriptTag2.parentNode.insertBefore(tag2, firstScriptTag2);
-    var player2;
-    function onYouTubeIframeAPIReady2() {
-        player2 = new YT.Player('player', {
-            videoId: 'bm4XzsmuR6E',
+        player2 = new YT.Player('player2', {
+            videoId: 'loXaYqCMbbE',
             playerVars: {
                 'autoplay': 1,
                 'rel': 0,
@@ -154,6 +133,19 @@
                 // 'onStateChange': onPlayerStateChange
             }
         });
+    }
+    function onPlayerReady(event) {
+        player.playVideo();
+        player.mute();
+    } var done = false;
+    function onPlayerStateChange(event) {
+        if (event.data == YT.PlayerState.PLAYING && !done) {
+            setTimeout(stopVideo, 6000);
+            done = true;
+        }
+    }
+    function stopVideo() {
+        player.stopVideo();
     }
     function onPlayerReady2(event) {
         player2.playVideo();
